Fixes to Summary Screen (#46)
* Components refactoring, little style fixes

* Fixed properties popup view

* Fixed scrollbar issue, added logo link

* Fixed Timemachine chart issue

* Fixed query error and query behaviour

* updated dependencies

--- a/src/src/components/Properties/PropertiesCounters/styles.scss
+++ b/src/src/components/Properties/PropertiesCounters/styles.scss
@@ -20,17 +20,20 @@
             align-items: baseline;
             font-family: 'Montserrat';
             word-break: break-all;
-            padding: 0 5px;
+            padding: 0 10px;
+            text-align: center;
 
             span {
                 font-weight: 600;
                 font-size: 32px;
+                line-height: 24px;
 
                 span {
                     color: #AAAAAA;
                     font-weight: 400;
                     font-size: 16px;
                     padding-left: 5px;
+                    word-break: keep-all;
                 }
             }
         }
