--- a/src/src/index.scss
+++ b/src/src/index.scss
@@ -135,3 +135,6 @@ div {
   background-color: #249448;
 }
 
+.lm_drag_handle {
+  left: 0 !important;
+}
